# sport-activities-features-gui

./: .gitignore  AUTHORS.md  CHANGELOG.md  ImportData.ui  MainWindow.ui  README.md  pyproject.toml
.github/workflows/: test.yml
AppData/: io.github.firefly-cpp.sport_activities_features_gui.desktop  io.github.firefly-cpp.sport_activities_features_gui.metainfo.xml
docs/: conf.py  index.rst
sport_activities_features_gui/: GlobalVars.py  __init__.py  config.py  globalVars.py  global_vars.py  logic.py  main.py  styles.qss
sport_activities_features_gui/functions/: Graphs.py  ImportData.py  MultiThread.py  Transformations.py  __init.py
sport_activities_features_gui/logic/: Graphs.py  ImportData.py  MultiThread.py  Transformations.py  __init.py  __init__.py  graphs.py  import_data.py  multi_thread.py  transformations.py
sport_activities_features_gui/models/: User.py  __init__.py  user.py
sport_activities_features_gui/widgets/: Calendar.py  CalendarWidget.py  Graphs.py  GraphsWidget.py  ImportData.py  ImportDataWidget.py  Transformations.py  TransformationsWidget.py  __init__.py  calendar_widget.py  calendarwidget.py  graphs_widget.py  import_data_widget.py  tansformations_widget.py  transformations_widget.py
sport_activities_features_gui/windows/: AddProfile.py  MainWindow.py  ProfilesWindow.py  ViewAttributesWindow.py  __init__.py  add_profile.py  main_window.py  profiles_window.py  view_attributes_window.py
tests/: test_sport_activities_features_gui.py
